<resources>
    <string name="app_name">FolkSets</string>
    <string name="loading_data">Loading data</string>

    <string name="current_directory">Current directory: </string>
    <string name="select_storage_directory">Select a storage directory</string>
    <string name="export_database_to_storage">Export database to storage</string>
    <string name="export_explanation">Let\'s you export your metadata to a file in your storage directory. For this button to be enabled, a storage directory must have been selected already.</string>
    <string name="import_database_from_storage">Import database from storage</string>
    <string name="import_explanation">Let\'s you import metadata from a file in your storage directory. For this button to be enabled, a storage directory must have been selected already and a metadata file must be present in it.</string>
    <string name="tab_tunes">TUNES</string>
    <string name="tab_sets">SETS</string>
    <string name="tab_settings">SETTINGS</string>
    <string name="set_songs_dropdown">Set songs drop down</string>

    <plurals name="number_of_tunes">
        <item quantity="one">%d tune</item>
        <item quantity="other">%d tunes</item>
    </plurals>
    <plurals name="number_of_sets">
        <item quantity="one">%d set</item>
        <item quantity="other">%d sets</item>
    </plurals>

    <string name="title">Title</string>
    <string name="titles">Titles</string>
    <string name="title_input">Add titles (end each entry with return or ; )</string>
    <string name="tags">Tags</string>
    <string name="tag_input">Add tags (end each entry with return or ; )</string>
    <string name="composers">Composers</string>
    <string name="composer_input">Add composers (end each entry with return or ; )</string>
    <string name="region">Region</string>
    <string name="region_of_origin">Region of origin</string>
    <string name="region_of_origin_input">Add regions of origin (end each entry with return or ; )</string>
    <string name="keys">Keys</string>
    <string name="key_input">Add keys (end each entry with return or ; )</string>
    <string name="incipit">Incipit</string>
    <string name="incipit_input">Add an incipit</string>
    <string name="form">Form</string>
    <string name="form_input">Add a form</string>
    <string name="played_by">Played by</string>
    <string name="played_by_input">Add players (end each entry with return or ; )</string>
    <string name="note">Note</string>
    <string name="note_input">Add a note</string>
    <string name="file_path">File path</string>
    <string name="file_type">File type</string>
    <string name="file_creation">File creation</string>
    <string name="last_consultation">Last consultation</string>
    <string name="consultations">Consultations</string>

    <string name="search_tunes">Search tunes</string>
    <string name="search_tags">Search tags</string>
    <string name="search_players">Search players</string>
    <string name="select_a_tune">Select a tune</string>
    <string name="select_a_tag">Select a tag</string>
    <string name="select_a_player">Select a player</string>
    <string name="search_sets">Search sets</string>
    <string name="placeholder">Placeholder</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <string name="edit_tune">Edit tune</string>

    <string name="create_new_set">Create new set</string>
    <string name="edit_set">Edit set</string>
    <string name="set_name">Set name</string>
    <string name="tune_in_sets">Tune in sets</string>

    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_last_created">Sort by last created</string>
    <string name="sort_by_last_consulted">Sort by last consulted</string>
    <string name="sort_by_most_consulted">Sort by most consulted</string>

    <string name="deselect_tune">Deselect tune</string>
    <string name="move_tune_up">Move tune up</string>
    <string name="move_tune_down">Move tune down</string>
    <string name="delete_set">Delete set</string>

    <string name="suggest_tune">Suggest tune</string>
    <string name="sets_containing_this_tune">Sets containing this tune</string>
    <string name="tunes_by_same_composer">Tunes by same composers</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="manage_tags">Manage tags</string>
    <string name="manage_players">Manage players</string>

    <string name="log_errors">Log errors to a file in storage</string>
    <string name="log_errors_explanation">This option, if enabled, may slow down application startup. It is therefore disabled by default. Enable it only if you encounter crashes that you want to investigate.</string>
    <string name="crop_whitespace">Crop whitespace</string>
    <string name="loading_speed_versus_crop_precision">Loading speed versus crop precision</string>
    <string name="precise_crop_slower_loading">Precise crop\nSlower loading</string>
    <string name="imprecise_crop_faster_loading">Imprecise crop\nFaster loading</string>
    <string name="pdf_cropper_seekbar_explanation">(If loading tunes takes too long, move the seekbar\'s handle right. If the whitespace around loaded tunes is cropped too imprecisely, move the seekbar\'s handle left.)</string>

    <string name="create_new_tag">Create new tag</string>
    <string name="create_new_player">Create new player</string>
    <string name="write_your_input_here">Write your input here</string>
    <string name="submit">Submit</string>

    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>

    <string name="select_a_direction">Select a direction</string>
    <string name="minus_1_minor">-1 minor (%1$s)</string>
    <string name="minus_1_major">-1 major (%1$s)</string>
    <string name="relative_minor">relative minor (%1$s)</string>
    <string name="relative_major">relative major (%1$s)</string>
    <string name="plus_1_minor">+1 minor (%1$s)</string>
    <string name="plus_1_major">+1 major (%1$s)</string>
    <string name="plus_4_minor">+4 minor (%1$s)</string>
    <string name="plus_4_major">+4 major (%1$s)</string>
    <string name="plus_5_minor">+5 minor (%1$s)</string>
    <string name="plus_5_major">+5 major (%1$s)</string>

    <string-array name="tune_sort_array">
        <item>@string/sort_by_title</item>
        <item>@string/sort_by_last_created</item>
        <item>@string/sort_by_last_consulted</item>
        <item>@string/sort_by_most_consulted</item>
    </string-array>
</resources>