<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_set_list_textinputlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/fragment_set_list_createnewset_button"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_set_list_textinputedittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search_sets"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="80"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fragment_set_list_matchcount_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_set_list_textinputlayout"
        app:layout_constraintRight_toRightOf="@+id/fragment_set_list_textinputlayout"
        app:layout_constraintTop_toBottomOf="@+id/fragment_set_list_textinputlayout" />

    <Button
        android:id="@+id/fragment_set_list_createnewset_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/create_new_set"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_set_list_textinputlayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/fragment_set_list_materialbuttontogglegroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:soundEffectsEnabled="true"
        app:checkedButton="@id/fragment_set_list_setname_materialbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_set_list_matchcount_textview"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_set_list_setname_materialbutton"
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_set_list_tuneinsets_materialbutton"
            style="?attr/materialButtonOutlinedStyle"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tune_in_sets" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_set_list_recyclerview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_set_list_materialbuttontogglegroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>